--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ nav ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #0074b7;
     position: absolute;
     left: 0;
     bottom: -6px;
@@ -73,7 +73,7 @@ nav ul li a:hover::after{
 }
 
 .header-text h1 span{
-    color: #ff004f;
+    color: #0074b7;
 }
 
 /* ------------------------------------About Me------------------------------------ */
@@ -124,7 +124,7 @@ nav ul li a:hover::after{
     content: '';
     width: 0;
     height: 3px;
-    background: #ff004f;
+    background: #0074b7;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -224,7 +224,7 @@ nav ul li a:hover::after{
 .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0,0,0,0.6), #ff004f);
+    background: linear-gradient(rgba(0,0,0,0.6), #0074b7);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -247,7 +247,7 @@ nav ul li a:hover::after{
 
 .layer a{
     margin-top: 20px;
-    color: #ff004f;
+    color: #0074b7;
     font-size: 18px;
     line-height: 60px;
     background: #fff;
@@ -269,7 +269,7 @@ nav ul li a:hover::after{
     display: block;
     margin: 50px auto;
     width: fit-content;
-    border: 1px solid #ff004f;
+    border: 1px solid #0074b7;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
@@ -278,7 +278,7 @@ nav ul li a:hover::after{
 }
 
 .btn:hover{
-    background: #ff004f;
+    background: #0074b7;
 }
 
 /* ----------------------------------Contact---------------------- */
@@ -295,7 +295,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #ff004f;
+    color: #0074b7;
     margin-right: 15px;
     font-size: 25px;
 }
@@ -314,13 +314,13 @@ nav ul li a:hover::after{
 }
 
 .social-icons a:hover{
-    color: #ff004f;
+    color: #0074b7;
     transform: translateY(-5px);
 }
 
 .btn.btn2{
     display: inline-block;
-    background: #ff004f;
+    background: #0074b7;
 }
 
 .contact-right form{
@@ -350,7 +350,7 @@ form input, form textarea{
 }
 
 .copyright i{
-    color: #ff004f;
+    color: #0074b7;
 }
 
 /* -------------------css for small screen------ */
@@ -373,7 +373,7 @@ nav .fa-solid{
         font-size: 25px;
     }
     nav ul{
-        background: #ff004f;
+        background: #0074b7;
         position: fixed;
         top: 0;
         right: -200px;
