--- a/style.css
+++ b/style.css
@@ -140,7 +140,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #0074b7;
     font-size: 14px;
 }
 
@@ -192,7 +192,7 @@ nav ul li a:hover::after{
 }
 
 .services-list div:hover{
-    background: #ef024d;
+    background: #0074b7;
     transform: translateY(-10px);
 }
 
