--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+    padding-left: 30px; 
+    margin-right: 10px;
 }
 
 .logo{
@@ -80,6 +82,10 @@ nav ul li a:hover::after{
 #about{
     padding: 80px 0;
     color: #ababab;
+    width: 100%;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
 }
 
 .row{
